# protein_cluster

./: .gitignore  README.md  config.json  config.yaml  plm_cluster.yaml  pyproject.toml
benchmark/: generate_benchmark_plots.py
container/: Dockerfile  container_embedder.def  graph_profile.def
docs/: algorithm_background.md  cli_workflow_and_options.md  config.orthofinder.yaml  config.template.yaml  installation_and_containers.md  output_schemas.md  rkcnn_implementation_plan.md
envs/: plm_cluster.yaml
example_data/: toy_proteins.faa
scripts/: install_in_conda_env.sh
scripts/slurm/: README.md  build_profiles.slurm  cluster_families.slurm  embed_cpu.slurm  embed_gpu.slurm  hmm_hmm_edges.slurm  hmm_hmm_edges_array.slurm  hmm_hmm_edges_mmseqs.slurm  knn.slurm  knn_gpu.slurm  map_proteins.slurm  merge_graph.slurm  merge_hmm_shards.slurm  mmseqs_cluster.slurm  orthofinder_cluster.slurm  run_all.slurm  run_all_orthofinder.slurm  write_matrices.slurm
src/plm_cluster/: cli.py  config.py  esm_extract_cli.py  io_utils.py  pipeline.py  qc_plots.py  rkcnn.py  runtime.py
src/plm_cluster.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_io_utils.py  test_orthofinder.py  test_pipeline.py  test_rkcnn.py  test_smoke.py
